--- a/tutorial_exo_predict.ipynb
+++ b/tutorial_exo_predict.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook is a tutorial for the usage of the exo_predict module. Using a model trained on all confirmed planets from the NASA Exoplanet Archive, the exo_predict module contains functionality to predict whether a system likely has a single planet or multiple planets. It does this using only a few features of the system: the stellar mass of the central star, the effective temperature, the radius of the star, and the method of discovery. This can be accomplished in the following three steps:\n",
+    "This notebook is a tutorial for the usage of the `exo_predict` module. Using a model trained on all confirmed planets from the NASA Exoplanet Archive, the exo_predict module contains functionality to predict whether a system likely has a single planet or multiple planets. It does this using only a few features of the system: the stellar mass of the central star, the effective temperature, the radius of the star, and the method of discovery. This can be accomplished in the following three steps:\n",
     "\n",
-    "1) Create an instance of the class with the create_num_planets_predictor function  \n",
+    "1) Create an instance of the class with the `create_num_planets_predictor` function  \n",
     "\n",
     "2) Load your data as a pandas dataframe and enter the names of your columns that contain the relevant information  \n",
     "\n",
