Fixed paths in tutorial

--- a/tutorial_exo_predict.ipynb
+++ b/tutorial_exo_predict.ipynb
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "# Load data into the notebook\n",
-    "df = pd.read_csv(\"planets_2020.06.23_15.26.09.csv\", skiprows=147)"
+    "df = pd.read_csv(\"data/planets_edited.csv\", skiprows=2)"
    ]
   },
   {
@@ -92,7 +92,28 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      st_mass  st_teff  st_rad  pct_discmethod       predictions\n",
+      "0        2.70   4742.0   19.00        0.193084     single planet\n",
+      "1        2.78   4213.0   29.79        0.193084     single planet\n",
+      "2        2.20   4813.0   11.00        0.193084     single planet\n",
+      "3        0.90   5338.0    0.93        0.193084     single planet\n",
+      "4        1.08   5750.0    1.13        0.193084     single planet\n",
+      "...       ...      ...     ...             ...               ...\n",
+      "4159     2.30   4388.0   26.80        0.193084     single planet\n",
+      "4160     1.30      NaN    1.56        0.193084  multiple planets\n",
+      "4161     1.30      NaN    1.56        0.193084  multiple planets\n",
+      "4162     1.30      NaN    1.56        0.193084  multiple planets\n",
+      "4163     2.20   4780.0   12.00        0.193084     single planet\n",
+      "\n",
+      "[4164 rows x 5 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "prediction_df = num_planets_predictor.make_prediction()\n",
     "\n",
