Fixed paths in tutorial

--- a/tutorial_model_predict.ipynb
+++ b/tutorial_model_predict.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"planets_2020.06.23_15.26.09.csv\", skiprows=147)"
+    "df = pd.read_csv(\"data/planets_edited.csv\", skiprows=2)"
    ]
   },
   {
@@ -72,11 +72,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 86.09%\n",
-      "Confusion:[[21100  2400]\n",
-      " [ 3400 14800]]\n",
-      "Recall: 81.32%\n",
-      "Precision: 86.05%\n"
+      "Accuracy: 85.13%\n",
+      "Confusion:[[22400  2600]\n",
+      " [ 3600 13100]]\n",
+      "Recall: 78.44%\n",
+      "Precision: 83.44%\n"
      ]
     }
    ],
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tess_data = pd.read_csv('tess_planets.csv', skiprows = 363)"
+    "tess_data = pd.read_csv('data/tess_planets.csv', skiprows = 363)"
    ]
   },
   {
@@ -148,7 +148,7 @@
       "6      0.90   5125.0    0.86        0.961538     single planet\n",
       "7      0.90   5125.0    0.86        0.961538     single planet\n",
       "8      1.72   6272.0    2.59        0.961538     single planet\n",
-      "9      1.07   5978.0    1.10        0.961538     single planet\n",
+      "9      1.07   5978.0    1.10        0.961538  multiple planets\n",
       "10     0.73   4640.0    0.69        0.961538  multiple planets\n",
       "11     0.92   5527.0    1.03        0.961538     single planet\n",
       "12     1.21   5080.0    2.94        0.961538     single planet\n",
@@ -164,7 +164,7 @@
       "22     0.31   3412.0    0.31        0.961538  multiple planets\n",
       "23     0.31   3412.0    0.31        0.961538  multiple planets\n",
       "24     0.50   3643.0    0.50        0.961538     single planet\n",
-      "25     0.15   3036.0    0.19        0.961538     single planet\n",
+      "25     0.15   3036.0    0.19        0.961538  multiple planets\n",
       "26     0.14   2960.0    0.17        0.961538  multiple planets\n",
       "27     0.14   2960.0    0.17        0.961538  multiple planets\n",
       "28     0.26   3337.0    0.28        0.961538     single planet\n",
@@ -222,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
