Fixed paths to example_data

--- a/Tutorials/tutorial_exo_predict.ipynb
+++ b/Tutorials/tutorial_exo_predict.ipynb
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "# Load data into the notebook\n",
-    "df = pd.read_csv(\"../data/planets_edited.csv\", skiprows=2)"
+    "df = pd.read_csv(\"../example_data/planets_edited.csv\", skiprows=2)"
    ]
   },
   {
