--- a/Tutorials/tutorial_model_predict.ipynb
+++ b/Tutorials/tutorial_model_predict.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import exo_model_predict as mp"
+    "from exo_predict import exo_model_predict as mp"
    ]
   },
   {
@@ -30,16 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../data/planets_edited.csv\", skiprows=2)"
+    "df = pd.read_csv(\"../example_data/planets_edited.csv\", skiprows=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,18 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 85.37%\n",
-      "Confusion:[[21700  2600]\n",
-      " [ 3500 13900]]\n",
-      "Recall: 79.89%\n",
-      "Precision: 84.24%\n"
+      "Accuracy: 84.65%\n",
+      "Confusion:[[21300  2500]\n",
+      " [ 3900 14000]]\n",
+      "Recall: 78.21%\n",
+      "Precision: 84.85%\n"
      ]
     }
    ],
@@ -95,23 +95,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tess_data = pd.read_csv('../data/tess_planets.csv', skiprows = 363)"
+    "tess_data = pd.read_csv('../example_data/tess_planets.csv', skiprows = 363)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/jeaadams/codeastro_ml_planets/Tutorials/exo_model_predict.py:120: SettingWithCopyWarning: \n",
+      "/Users/jeaadams/opt/anaconda3/lib/python3.7/site-packages/exo_predict/exo_model_predict.py:120: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -141,14 +141,14 @@
       "    st_mass  st_teff  st_rad  pct_discmethod       predictions\n",
       "0      0.50   3700.0    0.75        0.961538     single planet\n",
       "1      1.01   5428.0    0.96        0.961538     single planet\n",
-      "2      0.38   3458.0    0.39        0.961538     single planet\n",
+      "2      0.38   3458.0    0.39        0.961538  multiple planets\n",
       "3      0.73   4640.0    0.69        0.961538     single planet\n",
       "4      0.34   3505.0    0.34        0.961538  multiple planets\n",
-      "5      1.32   5521.0    2.34        0.961538     single planet\n",
+      "5      1.32   5521.0    2.34        0.961538  multiple planets\n",
       "6      0.90   5125.0    0.86        0.961538     single planet\n",
       "7      0.90   5125.0    0.86        0.961538     single planet\n",
       "8      1.72   6272.0    2.59        0.961538     single planet\n",
-      "9      1.07   5978.0    1.10        0.961538     single planet\n",
+      "9      1.07   5978.0    1.10        0.961538  multiple planets\n",
       "10     0.73   4640.0    0.69        0.961538     single planet\n",
       "11     0.92   5527.0    1.03        0.961538     single planet\n",
       "12     1.21   5080.0    2.94        0.961538     single planet\n",
@@ -188,9 +188,9 @@
       "46     0.40   3386.0    0.38        0.961538  multiple planets\n",
       "47     1.18   6295.0    1.28        0.961538     single planet\n",
       "48     1.32   5907.0    1.94        0.961538     single planet\n",
-      "49     1.12   5800.0    1.27        0.038462  multiple planets\n",
+      "49     1.12   5800.0    1.27        0.038462     single planet\n",
       "50     1.22   6400.0    1.23        0.038462  multiple planets\n",
-      "51     1.09   6037.0    1.10        0.961538     single planet\n"
+      "51     1.09   6037.0    1.10        0.961538  multiple planets\n"
      ]
     }
    ],
