--- a/Tutorials/tutorial_model_predict.ipynb
+++ b/Tutorials/tutorial_model_predict.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,18 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 84.65%\n",
-      "Confusion:[[21300  2500]\n",
-      " [ 3900 14000]]\n",
-      "Recall: 78.21%\n",
-      "Precision: 84.85%\n"
+      "Accuracy: 85.85%\n",
+      "Confusion:[[22500  2800]\n",
+      " [ 3100 13300]]\n",
+      "Recall: 81.10%\n",
+      "Precision: 82.61%\n"
      ]
     }
    ],
@@ -95,16 +95,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tess_data = pd.read_csv('../example_data/tess_planets.csv', skiprows = 363)"
+    "tess_data = pd.read_csv('../example_data/tess_planets.csv', skiprows = 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -141,15 +141,15 @@
       "    st_mass  st_teff  st_rad  pct_discmethod       predictions\n",
       "0      0.50   3700.0    0.75        0.961538     single planet\n",
       "1      1.01   5428.0    0.96        0.961538     single planet\n",
-      "2      0.38   3458.0    0.39        0.961538  multiple planets\n",
-      "3      0.73   4640.0    0.69        0.961538     single planet\n",
+      "2      0.38   3458.0    0.39        0.961538     single planet\n",
+      "3      0.73   4640.0    0.69        0.961538  multiple planets\n",
       "4      0.34   3505.0    0.34        0.961538  multiple planets\n",
-      "5      1.32   5521.0    2.34        0.961538  multiple planets\n",
-      "6      0.90   5125.0    0.86        0.961538     single planet\n",
-      "7      0.90   5125.0    0.86        0.961538     single planet\n",
+      "5      1.32   5521.0    2.34        0.961538     single planet\n",
+      "6      0.90   5125.0    0.86        0.961538  multiple planets\n",
+      "7      0.90   5125.0    0.86        0.961538  multiple planets\n",
       "8      1.72   6272.0    2.59        0.961538     single planet\n",
       "9      1.07   5978.0    1.10        0.961538  multiple planets\n",
-      "10     0.73   4640.0    0.69        0.961538     single planet\n",
+      "10     0.73   4640.0    0.69        0.961538  multiple planets\n",
       "11     0.92   5527.0    1.03        0.961538     single planet\n",
       "12     1.21   5080.0    2.94        0.961538     single planet\n",
       "13     0.75      NaN    0.73        0.961538  multiple planets\n",
@@ -173,9 +173,9 @@
       "31     0.68   4250.0    0.69        0.961538  multiple planets\n",
       "32     0.68   4250.0    0.69        0.961538  multiple planets\n",
       "33     0.64   3872.0    0.63        0.961538     single planet\n",
-      "34     0.86   5320.0    0.85        0.961538     single planet\n",
-      "35     0.86   5320.0    0.85        0.961538     single planet\n",
-      "36     0.86   5320.0    0.85        0.961538     single planet\n",
+      "34     0.86   5320.0    0.85        0.961538  multiple planets\n",
+      "35     0.86   5320.0    0.85        0.961538  multiple planets\n",
+      "36     0.86   5320.0    0.85        0.961538  multiple planets\n",
       "37     0.97   5397.0    0.90        0.961538     single planet\n",
       "38     1.13   6050.0    1.33        0.961538     single planet\n",
       "39     1.35   6255.0    1.53        0.961538     single planet\n",
@@ -190,7 +190,7 @@
       "48     1.32   5907.0    1.94        0.961538     single planet\n",
       "49     1.12   5800.0    1.27        0.038462     single planet\n",
       "50     1.22   6400.0    1.23        0.038462  multiple planets\n",
-      "51     1.09   6037.0    1.10        0.961538  multiple planets\n"
+      "51     1.09   6037.0    1.10        0.961538     single planet\n"
      ]
     }
    ],
