--- a/Tutorials/tutorial_model_predict.ipynb
+++ b/Tutorials/tutorial_model_predict.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../example_data/planets_edited.csv\", skiprows=2)"
+    "df = pd.read_csv(\"../example_data/planets_edited.csv\")"
    ]
   },
   {
@@ -72,11 +72,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 85.85%\n",
-      "Confusion:[[22500  2800]\n",
-      " [ 3100 13300]]\n",
-      "Recall: 81.10%\n",
-      "Precision: 82.61%\n"
+      "Accuracy: 86.33%\n",
+      "Confusion:[[22100  2400]\n",
+      " [ 3300 13900]]\n",
+      "Recall: 80.81%\n",
+      "Precision: 85.28%\n"
      ]
     }
    ],
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tess_data = pd.read_csv('../example_data/tess_planets.csv', skiprows = 2)"
+    "tess_data = pd.read_csv('../example_data/tess_planets.csv')"
    ]
   },
   {
@@ -142,14 +142,14 @@
       "0      0.50   3700.0    0.75        0.961538     single planet\n",
       "1      1.01   5428.0    0.96        0.961538     single planet\n",
       "2      0.38   3458.0    0.39        0.961538     single planet\n",
-      "3      0.73   4640.0    0.69        0.961538  multiple planets\n",
+      "3      0.73   4640.0    0.69        0.961538     single planet\n",
       "4      0.34   3505.0    0.34        0.961538  multiple planets\n",
-      "5      1.32   5521.0    2.34        0.961538     single planet\n",
-      "6      0.90   5125.0    0.86        0.961538  multiple planets\n",
-      "7      0.90   5125.0    0.86        0.961538  multiple planets\n",
+      "5      1.32   5521.0    2.34        0.961538  multiple planets\n",
+      "6      0.90   5125.0    0.86        0.961538     single planet\n",
+      "7      0.90   5125.0    0.86        0.961538     single planet\n",
       "8      1.72   6272.0    2.59        0.961538     single planet\n",
       "9      1.07   5978.0    1.10        0.961538  multiple planets\n",
-      "10     0.73   4640.0    0.69        0.961538  multiple planets\n",
+      "10     0.73   4640.0    0.69        0.961538     single planet\n",
       "11     0.92   5527.0    1.03        0.961538     single planet\n",
       "12     1.21   5080.0    2.94        0.961538     single planet\n",
       "13     0.75      NaN    0.73        0.961538  multiple planets\n",
@@ -173,9 +173,9 @@
       "31     0.68   4250.0    0.69        0.961538  multiple planets\n",
       "32     0.68   4250.0    0.69        0.961538  multiple planets\n",
       "33     0.64   3872.0    0.63        0.961538     single planet\n",
-      "34     0.86   5320.0    0.85        0.961538  multiple planets\n",
-      "35     0.86   5320.0    0.85        0.961538  multiple planets\n",
-      "36     0.86   5320.0    0.85        0.961538  multiple planets\n",
+      "34     0.86   5320.0    0.85        0.961538     single planet\n",
+      "35     0.86   5320.0    0.85        0.961538     single planet\n",
+      "36     0.86   5320.0    0.85        0.961538     single planet\n",
       "37     0.97   5397.0    0.90        0.961538     single planet\n",
       "38     1.13   6050.0    1.33        0.961538     single planet\n",
       "39     1.35   6255.0    1.53        0.961538     single planet\n",
@@ -188,9 +188,9 @@
       "46     0.40   3386.0    0.38        0.961538  multiple planets\n",
       "47     1.18   6295.0    1.28        0.961538     single planet\n",
       "48     1.32   5907.0    1.94        0.961538     single planet\n",
-      "49     1.12   5800.0    1.27        0.038462     single planet\n",
+      "49     1.12   5800.0    1.27        0.038462  multiple planets\n",
       "50     1.22   6400.0    1.23        0.038462  multiple planets\n",
-      "51     1.09   6037.0    1.10        0.961538     single planet\n"
+      "51     1.09   6037.0    1.10        0.961538  multiple planets\n"
      ]
     }
    ],
